--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="theme-color" content="#E0E3DF">
     <title>Adla Site</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/new-sections.css">
 </head>
 <body>
-    <header id="home">
+    <header>
         <nav class="main-nav">
             <div class="menu-toggle">
                 <span></span>
@@ -18,15 +19,16 @@
             </div>
             <ul>
                 <li><a href="#home" class="active">Home</a></li>
-                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#sobre-mim">Sobre</a></li>
                 <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#depoimentos">Depoimentos</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="hero-section" id="sobre">
+        <section class="hero-section" id="home">
             <div class="placeholder-image"></div>
             <div class="hero-text">
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Nullam suscipit lacinia nulla sed eleifend est luctus non Fusce sit amet ultricies est</p>
@@ -36,7 +38,7 @@
 
     <section class="blue-section hidden-footer" id="parceiros">
         <div class="section-content">
-            <p class="section-text hidden-text">Lorem ipsum dolor sit amet <span class="italic">consectetur</span></p>
+            <p class="section-text hidden-text">Empresas que confiam em nossos <span class="italic">serviços</span></p>
             <div class="hidden-logos logo-slider">
                 <div class="logo-slider-track">
                     <!-- Primeiro conjunto de logos -->
@@ -130,6 +132,91 @@
                 </div>
                 <div class="card-button">
                     <a href="https://wa.me/?text=Olá! Gostaria de saber mais sobre o Plano Premium" target="_blank" class="contract-btn">Contratar agora</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimonials-section hidden-section" id="depoimentos">
+        <div class="section-title">
+            <h2>Depoimentos</h2>
+        </div>
+        <div class="section-description">
+            <p>O que nossos clientes dizem sobre o nosso trabalho</p>
+        </div>
+        <div class="testimonials-container">
+            <div class="testimonials-slider">
+                <div class="testimonials-track">
+                    <!-- Primeiro conjunto de depoimentos -->
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-image placeholder-image"></div>
+                        </div>
+                    </div>
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-image placeholder-image"></div>
+                        </div>
+                    </div>
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-image placeholder-image"></div>
+                        </div>
+                    </div>
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-image placeholder-image"></div>
+                        </div>
+                    </div>
+                    <!-- Segundo conjunto de depoimentos (para infinito) -->
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-image placeholder-image"></div>
+                        </div>
+                    </div>
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-image placeholder-image"></div>
+                        </div>
+                    </div>
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-image placeholder-image"></div>
+                        </div>
+                    </div>
+                    <div class="testimonial-slide">
+                        <div class="testimonial-card">
+                            <div class="testimonial-image placeholder-image"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="about-section hidden-section" id="sobre-mim">
+        <div class="about-container">
+            <div class="about-image-container hidden-about-element">
+                <div class="about-image"></div>
+            </div>
+            <div class="about-content hidden-about-element">
+                <h2>Sobre</h2>
+                <p>Olá! Sou uma profissional apaixonada por marketing digital e estratégias de redes sociais. Com experiência em gestão de mídias sociais e criação de conteúdo de alto impacto, ajudo marcas a se conectarem com seu público de forma autêntica.</p>
+                <p>Minha abordagem combina criatividade, estratégia e análise de dados para desenvolver soluções personalizadas que elevam a presença digital das empresas e geram resultados tangíveis.</p>
+                <p>Acredito que a comunicação eficiente e o relacionamento com o público são a base para o sucesso nas redes sociais, sempre buscando inovação e as melhores práticas do mercado.</p>
+                <div class="about-stats">
+                    <div class="stat-item hidden-stat">
+                        <span class="stat-number">100+</span>
+                        <span class="stat-label">Clientes Satisfeitos</span>
+                    </div>
+                    <div class="stat-item hidden-stat">
+                        <span class="stat-number">5+</span>
+                        <span class="stat-label">Anos de Experiência</span>
+                    </div>
+                    <div class="stat-item hidden-stat">
+                        <span class="stat-number">1000+</span>
+                        <span class="stat-label">Postagens Criadas</span>
+                    </div>
                 </div>
             </div>
         </div>
