--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Adla Site</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/new-sections.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -80,7 +81,7 @@
         <div class="services-container">
             <div class="service-card hidden-card basic-card">
                 <div class="card-content">
-                    <h3>Plano Essencial</h3>
+                    <h3>Plano Starter</h3>
                     <div class="price">R$ 997 <span class="price-period">/mês</span></div>
                     <ul class="service-features">
                         <li>Gestão de 2 redes sociais</li>
@@ -97,7 +98,7 @@
             
             <div class="service-card hidden-card intermediate-card">
                 <div class="card-content">
-                    <h3>Plano Avançado</h3>
+                    <h3>Plano Plus</h3>
                     <div class="price">R$ 1.497 <span class="price-period">/mês</span></div>
                     <ul class="service-features">
                         <li>Gestão de 3 redes sociais</li>
@@ -116,7 +117,7 @@
             
             <div class="service-card hidden-card premium-card">
                 <div class="card-content">
-                    <h3>Plano Premium</h3>
+                    <h3>Plano Pro</h3>
                     <div class="price">R$ 2.497 <span class="price-period">/mês</span></div>
                     <ul class="service-features">
                         <li>Gestão de 4 redes sociais</li>
@@ -197,7 +198,7 @@
     <section class="about-section hidden-section" id="sobre-mim">
         <div class="about-container">
             <div class="about-image-container hidden-about-element">
-                <div class="about-image"></div>
+                <div class="about-image" style="background-image: url('images/sobre/IMG_6400_2.JPG');"></div>
             </div>
             <div class="about-content hidden-about-element">
                 <h2>Sobre</h2>
@@ -207,10 +208,10 @@
                 <div class="about-stats">
                     <div class="stat-item hidden-stat">
                         <span class="stat-number">100+</span>
-                        <span class="stat-label">Clientes Satisfeitos</span>
+                        <span class="stat-label">Contas Atendidas</span>
                     </div>
                     <div class="stat-item hidden-stat">
-                        <span class="stat-number">5+</span>
+                        <span class="stat-number">4+</span>
                         <span class="stat-label">Anos de Experiência</span>
                     </div>
                     <div class="stat-item hidden-stat">
@@ -288,5 +289,6 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
