Ajusta estilos de responsividade e preços nos planos; modifica texto de seções

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section class="blue-section hidden-footer" id="parceiros">
         <div class="section-content">
-            <p class="section-text hidden-text">Empresas que confiam em nossos <span class="italic">serviços</span></p>
+            <p class="section-text hidden-text">Empresas que confiam no meu <span class="italic">trabalho</span></p>
             <div class="hidden-logos logo-slider">
                 <div class="logo-slider-track">
                     <!-- Primeiro conjunto de logos -->
@@ -73,7 +73,7 @@
 
     <section class="services-section" id="servicos">
         <div class="section-title">
-            <h2>Nossos Serviços</h2>
+            <h2>Planos Disponíveis</h2>
         </div>
         <div class="section-description">
             <p>Escolha o plano ideal para impulsionar sua presença digital e conectar-se com seu público de forma autêntica e eficiente.</p>
@@ -82,57 +82,54 @@
             <div class="service-card hidden-card basic-card">
                 <div class="card-content">
                     <h3>Plano Starter</h3>
-                    <div class="price">R$ 997 <span class="price-period">/mês</span></div>
+                    <div class="price">$</div>
                     <ul class="service-features">
-                        <li>Gestão de 2 redes sociais</li>
-                        <li>12 posts mensais</li>
-                        <li>2 Stories por semana</li>
-                        <li>Relatório mensal</li>
-                        <li>Criação de legenda</li>
+                        <li>Estratégia personalizada</li>
+                        <li>Calendário de conteúdos</li>
+                        <li>Análise de mercado (Benchmarking)</li>
+                        <li>Design de posts</li>
                     </ul>
                 </div>
                 <div class="card-button">
-                    <a href="https://wa.me/?text=Olá! Gostaria de saber mais sobre o Plano Essencial" target="_blank" class="contract-btn">Contratar agora</a>
+                    <a href="https://wa.me/?text=Olá! Gostaria de saber mais sobre o Plano Essencial" target="_blank" class="contract-btn">CONTRATAR AGORA</a>
                 </div>
             </div>
             
             <div class="service-card hidden-card intermediate-card">
                 <div class="card-content">
                     <h3>Plano Plus</h3>
-                    <div class="price">R$ 1.497 <span class="price-period">/mês</span></div>
+                    <div class="price">$$</div>
                     <ul class="service-features">
-                        <li>Gestão de 3 redes sociais</li>
-                        <li>20 posts mensais</li>
-                        <li>4 Stories por semana</li>
-                        <li>Relatório quinzenal</li>
-                        <li>Criação de legenda</li>
-                        <li>Suporte prioritário</li>
-                        <li>1 Reels por mês</li>
+                        <li>Gestão de rede social</li>
+                        <li>Estratégia personalizada</li>
+                        <li>Calendário de conteúdos</li>
+                        <li>Análise de mercado (Benchmarking)</li>
+                        <li>Design de posts</li>
+                        <li>Análise de resultados trimestral</li>
                     </ul>
                 </div>
                 <div class="card-button">
-                    <a href="https://wa.me/?text=Olá! Gostaria de saber mais sobre o Plano Avançado" target="_blank" class="contract-btn">Contratar agora</a>
+                    <a href="https://wa.me/?text=Olá! Gostaria de saber mais sobre o Plano Avançado" target="_blank" class="contract-btn">CONTRATAR AGORA</a>
                 </div>
             </div>
             
             <div class="service-card hidden-card premium-card">
                 <div class="card-content">
                     <h3>Plano Pro</h3>
-                    <div class="price">R$ 2.497 <span class="price-period">/mês</span></div>
+                    <div class="price">$$$</div>
                     <ul class="service-features">
-                        <li>Gestão de 4 redes sociais</li>
-                        <li>30 posts mensais</li>
-                        <li>Stories diários</li>
-                        <li>Relatório semanal</li>
-                        <li>Criação de legenda</li>
-                        <li>Suporte VIP</li>
-                        <li>4 Reels por mês</li>
-                        <li>Consultoria estratégica</li>
-                        <li>Gerenciamento de anúncios</li>
+                        <li>Gestão de rede social</li>
+                        <li>Estratégia personalizada</li>
+                        <li>Calendário de conteúdos</li>
+                        <li>Análise de mercado (Benchmarking)</li>
+                        <li>Design de posts</li>
+                        <li>Captação e edição de vídeos</li>
+                        <li>Análise de resultados mensal</li>
+                        <li>Suporte prioritário</li>
                     </ul>
                 </div>
                 <div class="card-button">
-                    <a href="https://wa.me/?text=Olá! Gostaria de saber mais sobre o Plano Premium" target="_blank" class="contract-btn">Contratar agora</a>
+                    <a href="https://wa.me/?text=Olá! Gostaria de saber mais sobre o Plano Premium" target="_blank" class="contract-btn">CONTRATAR AGORA</a>
                 </div>
             </div>
         </div>
