--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/new-sections.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <header>
@@ -21,9 +22,9 @@
             <ul>
                 <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#sobre-mim">Sobre</a></li>
-                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#servicos" class="pill-item">Planos</a></li>
                 <li><a href="#depoimentos">Depoimentos</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="#contato" class="pill-item">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -39,7 +40,7 @@
 
     <section class="blue-section hidden-footer" id="parceiros">
         <div class="section-content">
-            <p class="section-text hidden-text">Empresas que confiam no meu <span class="italic">trabalho</span></p>
+            <p class="section-text hidden-text mt-4">Empresas que confiam no meu trabalho</p>
             <div class="hidden-logos logo-slider">
                 <div class="logo-slider-track">
                     <!-- Primeiro conjunto de logos -->
@@ -50,6 +51,7 @@
                     <div class="logo-slide atlanteplaza"></div>
                     <div class="logo-slide summerville"></div>
                     <div class="logo-slide empresa"></div>
+                    <div class="logo-slide v4"></div>
                     <!-- Segundo conjunto de logos -->
                     <div class="logo-slide frisabor"></div>
                     <div class="logo-slide mar-hotel"></div>
@@ -58,6 +60,7 @@
                     <div class="logo-slide atlanteplaza"></div>
                     <div class="logo-slide summerville"></div>
                     <div class="logo-slide empresa"></div>
+                    <div class="logo-slide v4"></div>
                     <!-- Terceiro conjunto de logos -->
                     <div class="logo-slide frisabor"></div>
                     <div class="logo-slide mar-hotel"></div>
@@ -66,6 +69,7 @@
                     <div class="logo-slide atlanteplaza"></div>
                     <div class="logo-slide summerville"></div>
                     <div class="logo-slide empresa"></div>
+                    <div class="logo-slide v4"></div>
                 </div>
             </div>
         </div>
@@ -84,10 +88,10 @@
                     <h3>Plano Starter</h3>
                     <div class="price">$</div>
                     <ul class="service-features">
-                        <li>Estratégia personalizada</li>
-                        <li>Calendário de conteúdos</li>
-                        <li>Análise de mercado (Benchmarking)</li>
-                        <li>Design de posts</li>
+                        <li><i class="fas fa-chess"></i>Estratégia personalizada</li>
+                        <li><i class="fas fa-calendar-alt"></i>Calendário de conteúdos</li>
+                        <li><i class="fas fa-chart-pie"></i>Análise de mercado (Benchmarking)</li>
+                        <li><i class="fas fa-palette"></i>Design de posts</li>
                     </ul>
                 </div>
                 <div class="card-button">
@@ -100,12 +104,12 @@
                     <h3>Plano Plus</h3>
                     <div class="price">$$</div>
                     <ul class="service-features">
-                        <li>Gestão de rede social</li>
-                        <li>Estratégia personalizada</li>
-                        <li>Calendário de conteúdos</li>
-                        <li>Análise de mercado (Benchmarking)</li>
-                        <li>Design de posts</li>
-                        <li>Análise de resultados trimestral</li>
+                        <li><i class="fas fa-share-alt"></i>Gestão de rede social</li>
+                        <li><i class="fas fa-chess"></i>Estratégia personalizada</li>
+                        <li><i class="fas fa-calendar-alt"></i>Calendário de conteúdos</li>
+                        <li><i class="fas fa-chart-pie"></i>Análise de mercado (Benchmarking)</li>
+                        <li><i class="fas fa-palette"></i>Design de posts</li>
+                        <li><i class="fas fa-chart-line "></i>Análise de resultados trimestral</li>
                     </ul>
                 </div>
                 <div class="card-button">
@@ -118,14 +122,14 @@
                     <h3>Plano Pro</h3>
                     <div class="price">$$$</div>
                     <ul class="service-features">
-                        <li>Gestão de rede social</li>
-                        <li>Estratégia personalizada</li>
-                        <li>Calendário de conteúdos</li>
-                        <li>Análise de mercado (Benchmarking)</li>
-                        <li>Design de posts</li>
-                        <li>Captação e edição de vídeos</li>
-                        <li>Análise de resultados mensal</li>
-                        <li>Suporte prioritário</li>
+                        <li><i class="fas fa-share-alt"></i>Gestão de rede social</li>
+                        <li><i class="fas fa-chess"></i>Estratégia personalizada</li>
+                        <li><i class="fas fa-calendar-alt"></i>Calendário de conteúdos</li>
+                        <li><i class="fas fa-chart-pie"></i>Análise de mercado (Benchmarking)</li>
+                        <li><i class="fas fa-palette"></i>Design de posts</li>
+                        <li><i class="fas fa-video"></i>Captação e edição de vídeos</li>
+                        <li><i class="fas fa-chart-line "></i>Análise de resultados mensal</li>
+                        <li><i class="fas fa-headset"></i>Suporte prioritário</li>
                     </ul>
                 </div>
                 <div class="card-button">
@@ -136,11 +140,11 @@
     </section>
 
     <section class="testimonials-section hidden-section" id="depoimentos">
-        <div class="section-title">
-            <h2>Depoimentos</h2>
-        </div>
         <div class="section-description">
-            <p>O que nossos clientes dizem sobre o nosso trabalho</p>
+            <p style="letter-spacing: 3px; font-size:23px; margin-bottom: -40px; color:#6b6d6b67;">DEPOIMENTOS</p>
+        </div>
+        <div class="section-title ">
+            <h2>Veja o que nossos clientes estão falando</h2>
         </div>
         <div class="testimonials-container">
             <div class="testimonials-slider">
@@ -235,7 +239,7 @@
                     </div>
                     <div class="contact-text">
                         <h3>Telefone</h3>
-                        <p>(81) 9 9999-9999</p>
+                        <p>(81) 9 8183-8285</p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -244,16 +248,7 @@
                     </div>
                     <div class="contact-text">
                         <h3>E-mail</h3>
-                        <p>contato@adla.com.br</p>
-                    </div>
-                </div>
-                <div class="contact-item">
-                    <div class="contact-icon">
-                        <i class="instagram-icon"></i>
-                    </div>
-                    <div class="contact-text">
-                        <h3>Instagram</h3>
-                        <p>@adla.social</p>
+                        <p>contato@adlamendes.com</p>
                     </div>
                 </div>
             </div>
