Ajusta texto da seção de parceiros para maior clareza; modifica estilos de responsividade do menu para melhor alinhamento e centralização

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section class="blue-section hidden-footer" id="parceiros">
         <div class="section-content">
-            <p class="section-text hidden-text mt-4">Empresas que confiam no meu trabalho</p>
+            <p class="section-text hidden-text mt-4">Empresas que em que já produzi conteúdos</p>
             <div class="hidden-logos logo-slider">
                 <div class="logo-slider-track">
                     <!-- Primeiro conjunto de logos -->
