feat: Atualiza conteúdo e estilos da seção hero para maior impacto visual e clareza

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
         <section class="hero-section" id="home">
             <div class="hero-content">
                 <div class="hero-text-content">
-                    <p class="hero-main-text">
-                    Quer se tornar uma marca memorável? <br/>
-                    O seu digital precisa de clareza, consistência e estratégia.<br/>
-                    E a melhor hora pra começar é agora.
+                    <h1 class="hero-main-text">
+                        O digital não é mais o futuro,<br/>
+                        <span class="hero-italic-text">ele é o <span class="hero-highlight">agora</span>.</span>
+                    </h1>
+                    <p class="hero-subtext">
+                        CHEGOU A HORA DA SUA MARCA OCUPAR O ESPAÇO QUE ELA MERECE.
                     </p>
                     <button class="hero-cta-button" onclick="scrollToPlans()">CONHECER OS PLANOS</button>
                 </div>
