--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="description" content="Site da Adla - Serviços e informações">
-    <meta name="theme-color" content="#E0E3DF">
+    <meta name="theme-color" content="#000B39">
+    <meta name="msapplication-navbutton-color" content="#000B39">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Adla Site</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/new-sections.css">
