refactor: Ajusta estilos da seção hero e novas seções para melhor responsividade e clareza

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Site da Adla - Serviços e informações">
     <meta name="theme-color" content="#000B39">
     <meta name="msapplication-navbutton-color" content="#000B39">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <title>Adla Site</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/new-sections.css">
@@ -52,7 +52,7 @@
 
     <section class="blue-section" id="parceiros">
         <div class="section-content">
-            <p style="letter-spacing: 3px; font-size:23px; margin-bottom: -40px; color:#ffffffb4;" class="mb-3">EMPRESAS EM QUE JÁ PRODUZI CONTEÚDOS</p>
+            <p style="letter-spacing: 3px; font-size:23px; color:#ffffffb4;  margin-bottom: -40px;" class="mb-3">EMPRESAS EM QUE JÁ PRODUZI CONTEÚDOS</p>
             <p class="section-text mb-4">Quer descobrir o que posso fazer pela sua marca também?</p>
             <div class="hidden-logos logo-slider">
                 <div class="logo-slider-track">
