refactor: Ajusta estilos da seção hero e navbar para melhor responsividade e clareza; remove arquivos de teste

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <body>
     <header>
         <nav class="main-nav">
+            <div class="navbar-logo">
+                <img src="Logos/adla.png" alt="Logo Adla" class="logo-image" onclick="scrollToHome()">
+            </div>
             <div class="menu-toggle">
                 <span></span>
                 <span></span>
@@ -52,7 +55,7 @@
 
     <section class="blue-section" id="parceiros">
         <div class="section-content">
-            <p style="letter-spacing: 3px; font-size:23px; color:#ffffffb4;  margin-bottom: -40px;" class="mb-3">EMPRESAS EM QUE JÁ PRODUZI CONTEÚDOS</p>
+            <p style="letter-spacing: 3px; font-size:18px; color:#ffffffb4;  margin-bottom: -20px;" class="">EMPRESAS EM QUE JÁ PRODUZI CONTEÚDOS</p>
             <p class="section-text mb-4">Quer descobrir o que posso fazer pela sua marca também?</p>
             <div class="hidden-logos logo-slider">
                 <div class="logo-slider-track">
