--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/new-sections.css">
     <link rel="stylesheet" href="css/hero-styles.css">
     <link rel="stylesheet" href="css/services-cta.css">
+    <link rel="stylesheet" href="css/testimonials.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
@@ -162,60 +163,7 @@
     </section>
 
     <section class="testimonials-section" id="depoimentos">
-        <div class="section-description">
-            <p style="letter-spacing: 3px; font-size:23px; margin-bottom: -40px; color:#6b6d6b67;">DEPOIMENTOS</p>
-        </div>
-        <div class="section-title ">
-            <h2>Veja o que nossos clientes estão falando</h2>
-        </div>
-        <div class="testimonials-container">
-            <div class="testimonials-slider">
-                <div class="testimonials-track">
-                    <!-- Primeiro conjunto de depoimentos -->
-                    <div class="testimonial-slide">
-                        <div class="testimonial-card">
-                            <div class="testimonial-image placeholder-image"></div>
-                        </div>
-                    </div>
-                    <div class="testimonial-slide">
-                        <div class="testimonial-card">
-                            <div class="testimonial-image placeholder-image"></div>
-                        </div>
-                    </div>
-                    <div class="testimonial-slide">
-                        <div class="testimonial-card">
-                            <div class="testimonial-image placeholder-image"></div>
-                        </div>
-                    </div>
-                    <div class="testimonial-slide">
-                        <div class="testimonial-card">
-                            <div class="testimonial-image placeholder-image"></div>
-                        </div>
-                    </div>
-                    <!-- Segundo conjunto de depoimentos (para infinito) -->
-                    <div class="testimonial-slide">
-                        <div class="testimonial-card">
-                            <div class="testimonial-image placeholder-image"></div>
-                        </div>
-                    </div>
-                    <div class="testimonial-slide">
-                        <div class="testimonial-card">
-                            <div class="testimonial-image placeholder-image"></div>
-                        </div>
-                    </div>
-                    <div class="testimonial-slide">
-                        <div class="testimonial-card">
-                            <div class="testimonial-image placeholder-image"></div>
-                        </div>
-                    </div>
-                    <div class="testimonial-slide">
-                        <div class="testimonial-card">
-                            <div class="testimonial-image placeholder-image"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!-- Conteúdo será inserido dinamicamente pelo JavaScript -->
     </section>
 
     <section class="about-section" id="sobre-mim">
@@ -315,6 +263,7 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="js/testimonials.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
