feat: Atualiza a descrição e o título da página para melhor refletir os serviços de social media

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description" content="Site da Adla - Serviços e informações">
+    <meta name="description" content="Adla Mendes - Especialista em Social Media em Recife. Gestão de redes sociais, estratégia digital e criação de conteúdo personalizado para sua marca.">
     <meta name="theme-color" content="#000B39">
     <meta name="msapplication-navbutton-color" content="#000B39">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <title>Adla Site</title>
+    <title>Adla Mendes • Social Media Recife</title>
+    <link rel="icon" type="image/png" href="Logos/adla.png">
+    <link rel="shortcut icon" type="image/png" href="Logos/adla.png">
+    <link rel="apple-touch-icon" href="Logos/adla.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/new-sections.css">
     <link rel="stylesheet" href="css/hero-styles.css">
