feat: Atualiza imagem da seção "Sobre" para melhorar a apresentação visual

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <section class="about-section" id="sobre-mim">
         <div class="about-container">
             <div class="about-image-container hidden-about-element">
-                <div class="about-image" style="background-image: url('images/sobre/IMG_6400_2.JPG');"></div>
+                <div class="about-image" style="background-image: url('images/sobre/IMG_6511_2.JPG'); height: 750px;"></div>
             </div>
             <div class="about-content hidden-about-element">
                 <h2>Sobre</h2>
