fix: Corrige erro de capitalização na seção "Sobre" para melhorar a clareza do texto

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <h2>Sobre</h2>
                 <p style="font-size: 19px;">Ao longo da minha trajetória de mais de 4 anos, vivendo o Marketing na prática todos os dias, tive o prazer de desenvolver conteúdos para grandes e pequenas empresas de diversos segmentos do mercado.</p>
                 <p style="font-size: 19px;">Meu trabalho sempre parte do princípio de entender a essência de cada marca, para traduzir isso em uma comunicação que carrega personalidade e estratégia.</p>
-                <p style="font-size: 19px;">A Minha abordagem combina criatividade e análise de dados para desenvolver soluções personalizadas que geram resultados pro seu negócio.</p>
+                <p style="font-size: 19px;">A minha abordagem combina criatividade e análise de dados para desenvolver soluções personalizadas que geram resultados pro seu negócio.</p>
                 <p style="font-size: 19px;">Acredito que a base para ter sucesso — dentro e fora das redes sociais — está na forma como você se comunica e se relaciona com o seu público. Por isso, busco sempre criar soluções criativas, que respeitem a essência da sua marca e falem direto com quem realmente importa: o seu cliente.
 </p>
                 <div class="about-stats">
