fix: Atualiza nomes dos planos e corrige erros de digitação na seção de serviços e sobre

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="services-container">
             <div class="service-card hidden-card basic-card">
                 <div class="card-content">
-                    <h3>Plano Starter</h3>
+                    <h3>Starter</h3>
                     <div class="price">$</div>
                     <ul class="service-features">
                         <li><i class="fas fa-bullseye"></i>Estratégia personalizada</li>
@@ -127,7 +127,7 @@
             
             <div class="service-card hidden-card intermediate-card">
                 <div class="card-content">
-                    <h3>Plano Plus</h3>
+                    <h3>Gestão Plus</h3>
                     <div class="price">$$</div>
                     <ul class="service-features">
                         <li><i class="fas fa-share-alt"></i>Gestão de rede social</li>
@@ -145,7 +145,7 @@
             
             <div class="service-card hidden-card premium-card">
                 <div class="card-content">
-                    <h3>Plano Pro</h3>
+                    <h3>Gerenciamento Pro</h3>
                     <div class="price">$$$</div>
                     <ul class="service-features">
                         <li><i class="fas fa-share-alt"></i>Gestão de rede social</li>
@@ -176,11 +176,10 @@
             </div>
             <div class="about-content hidden-about-element">
                 <h2>Sobre</h2>
-                <p style="font-size: 19px;">Ao longo da minha trajetória de mais de 4 anos, vivendo o Marketing na prática todos os dias, tive o prazer de desenvolver conteúdos para grandes e pequenas empresas de diversos segmentos do mercado.</p>
-                <p style="font-size: 19px;">Meu trabalho sempre parte do princípio de entender a essência de cada marca, para traduzir isso em uma comunicação que carrega personalidade e estratégia.</p>
+                <p style="font-size: 19px;">Ao longo da minha trajetória de mais de 4 anos vivendo o Marketing na prática todos os dias, tive o prazer de desenvolver conteúdos para grandes e pequenas empresas de diversos segmentos do mercado.</p>
+                <p style="font-size: 19px;">MMeu trabalho sempre parte do princípio de entender a essência de cada marca, para traduzir isso em uma comunicação que carrega personalidade e estratégia.</p>
                 <p style="font-size: 19px;">A minha abordagem combina criatividade e análise de dados para desenvolver soluções personalizadas que geram resultados pro seu negócio.</p>
-                <p style="font-size: 19px;">Acredito que a base para ter sucesso — dentro e fora das redes sociais — está na forma como você se comunica e se relaciona com o seu público. Por isso, busco sempre criar soluções criativas, que respeitem a essência da sua marca e falem direto com quem realmente importa: o seu cliente.
-</p>
+                <p style="font-size: 19px;">Acredito que a base para ter sucesso (dentro e fora das redes sociais) está na forma como você se comunica e se relaciona com o seu público. Por isso, busco sempre criar soluções criativas, que respeitem a essência da sua marca e falem direto com quem realmente importa: o seu cliente.</p>
                 <div class="about-stats">
                     <div class="stat-item hidden-stat">
                         <span class="stat-number">100+</span>
