--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/hero-styles.css">
     <link rel="stylesheet" href="css/services-cta.css">
     <link rel="stylesheet" href="css/testimonials.css">
+    <link rel="stylesheet" href="css/why-choose.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
@@ -33,6 +34,7 @@
             <ul>
                 <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#sobre-mim">Sobre</a></li>
+                <li><a href="#o-que-oferecemos">Serviços</a></li>
                 <li><a href="#servicos" class="pill-item">Planos</a></li>
                 <li><a href="#depoimentos">Depoimentos</a></li>
                 <li><a href="#contato" class="pill-item">Contato</a></li>
@@ -101,12 +103,70 @@
         </div>
     </section>
 
+    <section class="what-we-offer-section" id="o-que-oferecemos">
+        <div class="section-title">
+            <h2>O que oferecemos?</h2>
+        </div>
+        <div class="section-description">
+            <p>Mais do que serviços, te entrego soluções que vão fazer sua marca se destacar no digital.</p>
+        </div>
+        <div class="services-list">
+            <div class="service-item hidden-service">
+                <div class="service-icon">
+                    <i class="fas fa-paint-brush"></i>
+                </div>
+                <h3>Identidade Visual</h3>
+            </div>
+            <div class="service-item hidden-service">
+                <div class="service-icon">
+                    <i class="fas fa-camera"></i>
+                </div>
+                <h3>Captação de Conteúdo</h3>
+            </div>
+            <div class="service-item hidden-service">
+                <div class="service-icon">
+                    <i class="fas fa-users"></i>
+                </div>
+                <h3>Gestão de Redes Sociais</h3>
+                <p class="service-platforms">[Instagram, Linkedin, Tiktok, YouTube]</p>
+            </div>
+            <div class="service-item hidden-service">
+                <div class="service-icon">
+                    <i class="fas fa-code"></i>
+                </div>
+                <h3>Criação de Site e Landing Page</h3>
+            </div>
+            <div class="service-item hidden-service">
+                <div class="service-icon">
+                    <i class="fas fa-map-marker-alt"></i>
+                </div>
+                <h3>Atualização do Google Meu Negócio</h3>
+            </div>
+        </div>
+    </section>
+
+    <section class="why-choose-section" id="por-que-escolher">
+        <div class="section-title">
+            <h2>Por que escolher meus serviços?</h2>
+        </div>
+        <div class="why-choose-content">
+            <div class="why-choose-text">
+                <p class="main-text">Você já entendeu que só estar nas redes sociais não basta. Não é sobre ter uma conta e postar dancinha, é sobre ter uma marca relevante, lembrada e desejada.</p>
+                <p class="main-text">E pra isso, você precisa de um planejamento.</p>
+                <p class="main-text">O que eu te entrego vai além disso tudo:</p>
+                <div class="highlight-quote">
+                    <p>Você não precisa fazer mais do mesmo. <span class="emphasis">Você precisa fazer o que funciona.</span></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="services-section" id="servicos">
         <div class="section-title">
             <h2>Planos Disponíveis</h2>
         </div>
         <div class="section-description">
-            <p>Escolha o plano que combina com a sua fase atual.</p>
+            <p>Escolha o plano que mais combina com o que você está buscando!</p>
         </div>
         <div class="services-container">
             <div class="service-card hidden-card basic-card">
@@ -169,17 +229,17 @@
         <!-- Conteúdo será inserido dinamicamente pelo JavaScript -->
     </section>
 
-    <section class="about-section" id="sobre-mim">
+    <section style="padding-top: 10px;" class="about-section" id="sobre-mim">
         <div class="about-container">
             <div class="about-image-container hidden-about-element">
-                <div class="about-image" style="background-image: url('images/sobre/IMG_6511_2.JPG'); height: 750px;"></div>
+                <div class="about-image" style="background-image: url('images/sobre/IMG_6511_2.JPG');"></div>
             </div>
             <div class="about-content hidden-about-element">
                 <h2>Sobre</h2>
-                <p style="font-size: 19px;">Ao longo da minha trajetória de mais de 4 anos vivendo o Marketing na prática todos os dias, tive o prazer de desenvolver conteúdos para grandes e pequenas empresas de diversos segmentos do mercado.</p>
-                <p style="font-size: 19px;">MMeu trabalho sempre parte do princípio de entender a essência de cada marca, para traduzir isso em uma comunicação que carrega personalidade e estratégia.</p>
-                <p style="font-size: 19px;">A minha abordagem combina criatividade e análise de dados para desenvolver soluções personalizadas que geram resultados pro seu negócio.</p>
-                <p style="font-size: 19px;">Acredito que a base para ter sucesso (dentro e fora das redes sociais) está na forma como você se comunica e se relaciona com o seu público. Por isso, busco sempre criar soluções criativas, que respeitem a essência da sua marca e falem direto com quem realmente importa: o seu cliente.</p>
+                <p style="font-size: 18px; padding: bottom 5px;">Ao longo da minha trajetória de mais de 4 anos vivendo o Marketing na prática todos os dias, tive o prazer de desenvolver conteúdos para grandes e pequenas empresas de diversos segmentos do mercado.</p>
+                <p style="font-size: 18px;">Meu trabalho sempre parte do princípio de entender a essência de cada marca, para traduzir isso em uma comunicação que carrega personalidade e estratégia.</p>
+                <p style="font-size: 18px;">A minha abordagem combina criatividade e análise de dados para desenvolver soluções personalizadas que geram resultados pro seu negócio.</p>
+                <p style="font-size: 18px;">Acredito que a base para ter sucesso (dentro e fora das redes sociais) está na forma como você se comunica e se relaciona com o seu público. Por isso, busco sempre criar soluções criativas, que respeitem a essência da sua marca e falem direto com quem realmente importa: o seu cliente.</p>
                 <div class="about-stats">
                     <div class="stat-item hidden-stat">
                         <span class="stat-number">100+</span>
