feat: Adiciona guia CLAUDE.md e atualiza ícones do site; remove função de ajuste da navbar ao rolar

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="msapplication-navbutton-color" content="#000B39">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <title>Adla Mendes • Social Media Recife</title>
-    <link rel="icon" type="image/png" href="Logos/adla.png">
-    <link rel="shortcut icon" type="image/png" href="Logos/adla.png">
-    <link rel="apple-touch-icon" href="Logos/adla.png">
+    <link rel="icon" type="image/png" href="Logos/adlaico.png">
+    <link rel="shortcut icon" type="image/png" href="Logos/adlaico.png">
+    <link rel="apple-touch-icon" href="Logos/adlaico.png">
+    
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/new-sections.css">
     <link rel="stylesheet" href="css/hero-styles.css">
