feat: Adiciona configurações de permissões e atualiza a seção de serviços com ícones de plataformas

--- a/index.html
+++ b/index.html
@@ -129,7 +129,12 @@
                     <i class="fas fa-users"></i>
                 </div>
                 <h3>Gestão de Redes Sociais</h3>
-                <p class="service-platforms">[Instagram, Linkedin, Tiktok, YouTube]</p>
+                <div class="service-platforms">
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-linkedin"></i>
+                    <i class="fab fa-tiktok"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
             </div>
             <div class="service-item hidden-service">
                 <div class="service-icon">
