fix: Melhora a descrição da seção "o que oferecemos" para maior clareza

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h2>O que oferecemos?</h2>
         </div>
         <div class="section-description">
-            <p>Mais do que serviços, te entrego soluções que vão fazer sua marca se destacar no digital.</p>
+            <p>Soluções que vão fazer sua marca se destacar no digital. </p>
         </div>
         <div class="services-list">
             <div class="service-item hidden-service">
