fix: Atualiza o nome do plano "Starter" para "Plano Starter" para maior clareza

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="services-container">
             <div class="service-card hidden-card basic-card">
                 <div class="card-content">
-                    <h3>Starter</h3>
+                    <h3>Plano Starter</h3>
                     <div class="price">$</div>
                     <ul class="service-features">
                         <li><i class="fas fa-bullseye"></i>Estratégia personalizada</li>
