fix: Atualiza o título da seção de serviços para "Gestão do Google Meu Negócio" para maior clareza

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <div class="service-icon">
                     <i class="fas fa-map-marker-alt"></i>
                 </div>
-                <h3>Atualização do Google Meu Negócio</h3>
+                <h3>Gestão do Google Meu Negócio</h3>
             </div>
         </div>
     </section>
