feat: Adiciona texto secundário na seção hero para destacar a importância das redes sociais

--- a/index.html
+++ b/index.html
@@ -105,8 +105,11 @@
                 <div class="hero-text-content">
                     <h1 class="hero-main-text">
                         O digital não é mais o futuro,<br/>
-                        <span class="hero-italic-text">ele é o <span class="hero-highlight">agora</span>.</span>
+                        <span class="hero-italic-text">É o <span class="hero-highlight">agora</span>.</span>
                     </h1>
+                    <p class="hero-secondary-text">
+                        AS REDES SOCIAIS PODEM (E DEVEM) SER SUA MAIOR FERRAMENTA DE CRESCIMENTO.
+                    </p>
                     <p class="hero-subtext">
                         CHEGOU A HORA DA SUA MARCA OCUPAR O ESPAÇO QUE ELA MERECE.
                     </p>
