--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="description" content="Adla Mendes - Especialista em Social Media em Recife. Gestão de redes sociais, estratégia digital e criação de conteúdo personalizado para sua marca.">
     <meta name="theme-color" content="#000B39">
     <meta name="msapplication-navbutton-color" content="#000B39">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     
     <!-- Meta tags adicionais para SEO e favicon -->
     <meta name="robots" content="index, follow">
