--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Adla Mendes - Especialista em Social Media em Recife. Gestão de redes sociais, estratégia digital e criação de conteúdo personalizado para sua marca.">
     <meta name="theme-color" content="#000B39">
     <meta name="msapplication-navbutton-color" content="#000B39">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-capable" content="yes">
     
     <!-- Meta tags adicionais para SEO e favicon -->
@@ -344,7 +344,7 @@
         </div>
         <div class="contact-container">
             <div class="contact-info">
-                <div class="contact-item">
+                <a href="https://wa.me/5581981838285?text=Oi,%20Adla!%20Vim%20pelo%20site%20e%20gostaria%20de%20falar%20com%20você." target="_blank" class="contact-item whatsapp-clickable">
                     <div class="contact-icon">
                         <i class="whatsapp-icon"></i>
                     </div>
@@ -352,7 +352,7 @@
                         <h3>WhatsApp</h3>
                         <p>(81) 9 8183-8285</p>
                     </div>
-                </div>
+                </a>
                 <div class="contact-item">
                     <div class="contact-icon">
                         <i class="email-icon"></i>
@@ -384,6 +384,11 @@
             </div>
         </div>
     </section>
+
+    <!-- Botão Voltar ao Topo -->
+    <button id="backToTop" class="back-to-top" title="Voltar ao topo">
+        <i class="fas fa-chevron-up"></i>
+    </button>
 
     <footer class="main-footer">
         <div class="footer-content">
