feat: Adiciona novas logos ao slider e oculta a logo da navbar por padrão

--- a/index.html
+++ b/index.html
@@ -127,34 +127,43 @@
             <div class="hidden-logos logo-slider">
                 <div class="logo-slider-track">
                     <!-- Primeiro conjunto de logos -->
-                     <div class="logo-slide v4"></div>
+                    <div class="logo-slide v4"></div>
+                    <div class="logo-slide jose1"></div>
                     <div class="logo-slide frisabor"></div>
                     <div class="logo-slide mar-hotel"></div>
+                    <div class="logo-slide jose2"></div>
                     <div class="logo-slide fricai"></div>
                     <div class="logo-slide ultra"></div>
                     <div class="logo-slide atlanteplaza"></div>
+                    <div class="logo-slide jose3"></div>
                     <div class="logo-slide summerville"></div>
                     <div class="logo-slide empresa"></div>
                     <div class="logo-slide habilite"></div>
                     
                     <!-- Segundo conjunto de logos -->
-                      <div class="logo-slide v4"></div>
+                    <div class="logo-slide v4"></div>
+                    <div class="logo-slide jose1"></div>
                     <div class="logo-slide frisabor"></div>
                     <div class="logo-slide mar-hotel"></div>
+                    <div class="logo-slide jose2"></div>
                     <div class="logo-slide fricai"></div>
                     <div class="logo-slide ultra"></div>
                     <div class="logo-slide atlanteplaza"></div>
+                    <div class="logo-slide jose3"></div>
                     <div class="logo-slide summerville"></div>
                     <div class="logo-slide empresa"></div>
                     <div class="logo-slide habilite"></div>
                    
                     <!-- Terceiro conjunto de logos -->
-                     <div class="logo-slide v4"></div>
+                    <div class="logo-slide v4"></div>
+                    <div class="logo-slide jose1"></div>
                     <div class="logo-slide frisabor"></div>
                     <div class="logo-slide mar-hotel"></div>
+                    <div class="logo-slide jose2"></div>
                     <div class="logo-slide fricai"></div>
                     <div class="logo-slide ultra"></div>
                     <div class="logo-slide atlanteplaza"></div>
+                    <div class="logo-slide jose3"></div>
                     <div class="logo-slide summerville"></div>
                     <div class="logo-slide empresa"></div>
                     <div class="logo-slide habilite"></div>
